tests/NormalTests/paczka1/fuzzy1/42592499.err
Error in line 13: ZQchdRmNeBt S186 29,6
Error in line 8: A619 S447 38,7
